2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Properly initialize linked
	list pointer to beginning rather than one beyond beginning.

2001-10-12  Andrew Cagney  <ac131313@redhat.com>

	* version.in: Bump to 5.0.91.  Add YYYY-MM-DD.

2001-10-12  Pierre Muller  <muller@ics.u-strasbg.fr>

	* config/i386/tm-cygwin.h: Include tm-i386.h instead of tm-i386v.h.
	This fixes errors in "long long" handling for 'finish' and 'return'
	commands.

2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Avoid adding a shared
	library if it has already been loaded.
	(safe_symbol_file_add_cleanup): Don't mess with stderr or we won't see
	any error messages.
	(safe_symbol_file_add): Ditto.
	(solib_symbols_add): Make static.  Accept 'from_tty' parameter.  Pass
	it to safe_symbol_file_add.
	(core_dll_symbols_add): Accomodate extra solib_symbols_add parameter.
	(child_solib_add): Ditto.

	* win32-nat.c (handle_exception): Don't print "first chance"
	exceptions.
	(get_child_debug_event): Continue from exceptions if !handle_exception.

2001-10-10  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (get_child_debug_event): Close file handles created after
	process creation and DLL load.
	(child_create_inferior): Close unneeded process/thread handle after
	thread creation.

2001-10-08  J. Brobecker <brobecker@gnat.com>

	* hpux-thread.c: rewrite find_active_thread() and find_tcb()
	to use ptid_t, instead of overloading the thread and the pid
	into the same 32-bit value. Make associated necessary adaptations.
	Also remove unused variable cached_active_thread.

2001-09-26  Kevin Buettner  <kevinb@redhat.com>

	From Ilya Golubev <gin@mo.msk.ru>:
	* solib.c (clear_solib): Call `remove_target_sections' to fix
	stale pointers in `struct target_ops'.
	* irix5-nat.c (clear_solib): Likewise.
	* osfsolib.c (clear_solib): Likewise.

2001-09-26  Andrew Cagney  <ac131313@redhat.com>

	* CONTRIBUTE: Update.
